--- a/public/Landingpage.css
+++ b/public/Landingpage.css
@@ -1,1 +1,174 @@
-buybyvytv
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    background-image: url(images/pexels-huseyn-kamaladdin-667838.jpg);
+    background-size: cover;
+    min-height: 100vh ;
+    backdrop-filter: blur(5px);
+}
+
+nav {
+    width: 100%;
+    background-color:#BAE6FD;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 0rem;
+
+    color: #000;
+}
+
+
+nav .logo {
+    font-size: 1.rem;
+    width: 80%;
+}
+
+
+nav .logo img {
+    padding-top: 0px;
+    width: 110px;
+}
+
+
+.nav-links {
+    list-style-type: none;
+    display: flex;
+    overflow: hidden;
+}
+
+
+.nav-links li a {
+    color: inherit;
+    margin-left: 1rem;
+    cursor: pointer;
+    text-decoration: none;
+    float: left;
+    text-align: center;
+    color: rgb(5, 14, 71);
+    margin-right: 20px;
+}
+
+.nav-links a:hover {
+    color:#65655f;
+  }
+
+  .nav-links a.active {
+    color: white;
+  }
+
+  .nav-links .icon {
+    display: none;
+  }
+
+a{
+    color: #000;
+    padding: 5px;
+}
+
+
+
+
+.contents {
+    min-height: 100vh;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    padding-top: 1rem;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.content-wrapper {
+    margin-left: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 40%;
+    float: center;
+    background-color: #65655f;
+}
+
+.btn {
+    padding: 18px 34px;
+    font-size: 18px;
+    font-weight: 700;
+    display: inline-block;
+    margin-right: 24px;
+    margin-bottom: 24px;
+    color: #000;
+    background-color: #BAE6FD;
+    border-color: #BAE6FD;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    line-height: 1.5;
+    border-radius: 0.25;
+}
+
+a {
+    color: #007bff;
+    text-decoration: none;
+    background-color: transparent;
+}
+
+.content-wrapper img {
+    width: 90%;
+    margin: 10px auto;
+    padding-left: 60px; 
+}
+
+
+
+/* responsive */
+
+@media screen and (max-width:768px) {
+    nav {
+        flex-direction: initial;
+        margin: 0rem;
+    }
+
+    nav .logo {
+        margin-top: 2rem;
+        text-align: left;
+        width: 100%;
+    }
+
+    nav ul {
+        padding-inline-start: 0;
+        margin: 3rem;
+    }
+
+    h1 {
+        margin-top: 0px;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .content-wrapper {
+        max-width: 100% !important;
+        margin-top: auto;
+    }
+
+    img {
+        width: 60%;
+        margin: 0 auto;
+        padding: 2rem 0 2rem 0;
+    }
+}
+
+
+@media screen and (min-width: 100px) {
+    .contents {
+        padding-top: 6rem;
+    }
+}
+.marque{
+    margin-top: 20px;
+}
